--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,13 @@ body,
 :root {
   color: white;
 }
+@layer utilities {
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+    border-radius: 2px;
+  }
+}
 
 @layer base {
   :root {
